# AWS_HACKATHON_CDSS

./: .env.example  .gitignore  DESIGN_IMPLEMENTATION.md  Dockerfile.frontend  ISSUES.md  PUSH_TO_GITHUB.md  README.md  check_aws_creds.py  enter_cdss.ps1  main.tf  pyproject.toml  requirements.txt  test_infra.py  variables.tf
.github/workflows/: ci.yml
backend/agents/engagement/: handler.py
backend/agents/patient/: handler.py
backend/agents/resource/: handler.py
backend/agents/scheduling/: handler.py
backend/agents/shared/: audit_logger.py  config.py
backend/agents/supervisor/: handler.py
backend/agents/surgery_planning/: handler.py
backend/api/rest/: dashboard_handler.py  database_crud.py
docs/: AI_ASSISTANT_DEBUG_LOG_2026-03-25.md  DEPLOYMENT_DB_RCA.md  MODULE_STATUS_RCA.md  api.md  architecture.md  deployment.md
frontend/: package-lock.json
frontend/apps/doctor-dashboard/: .env.example  .env.production  vite.config.js
frontend/apps/patient-dashboard/: .env.example  package.json
infra/: agent_test.json  cdk.context.json  package-lock.json  payload.json  response.json  seed_payload.json  seed_response.json  tsconfig.json
infra/cdk.out/: CdssStack.assets.json  CdssStack.template.json  manifest.json  tree.json
infra/lib/: cdss-stack.ts
infrastructure/: README.md  backend.tf  deploy.ps1  main.tf  outputs.tf  variables.tf
scripts/: deploy_frontend.ps1  deploy_patient_portal.sh  expand_seed_data.py
src/cdss/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: test_supervisor.py
(+68 files in other folders)
